# private-schools-app-

./: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: clientLayout.tsx  globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/payments/: page.tsx
app/reports/: page.tsx
app/scan/: page.tsx
app/settings/: loading.tsx  page.tsx
app/students/: page.tsx
components/: theme-provider.tsx
components/auth/: protected-route.tsx  user-menu.tsx
components/dashboard/: quick-actions.tsx  recent-activity.tsx  stat-widget.tsx
components/layout/: offline-indicator.tsx  sidebar.tsx
components/payments/: bulk-payment-modal.tsx  outstanding-payments.tsx  payment-calendar.tsx  payment-history.tsx  payment-stats-cards.tsx
components/reports/: attendance-reports.tsx  date-range-picker.tsx  financial-reports.tsx  report-export.tsx  student-reports.tsx
components/scan/: scan-error.tsx  scan-ready.tsx  scan-success.tsx
components/settings/: backup-settings.tsx  general-settings.tsx  payment-settings.tsx  rfid-settings.tsx  system-info.tsx  user-management.tsx
components/students/: academic-level-section.tsx  student-card.tsx  student-form-modal.tsx
components/ui/: card.tsx
contexts/: language-context.tsx
hooks/: use-auth.tsx  use-offline.tsx
lib/: constants.ts  rfid-manager.ts  tauri-api.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  models.rs  rfid.rs
src-tauri/src/commands/: database.rs  mod.rs  rfid.rs  system.rs
types/: models.ts
